Fixed Scroll Up arrow alignment

--- a/SCSS/Main/_main.scss
+++ b/SCSS/Main/_main.scss
@@ -126,7 +126,7 @@ body {
   content: "";
   position: absolute;
   left: -70%;
-  bottom: 100%;
+  bottom: 99%;
   width: 0;
   height: 0;
   border-left: 12px solid transparent;
