--- a/css/style.css
+++ b/css/style.css
@@ -598,7 +598,7 @@ body {
   content: "";
   position: absolute;
   left: -70%;
-  bottom: 100%;
+  bottom: 99%;
   width: 0;
   height: 0;
   border-left: 12px solid transparent;
